# jorts

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  Package.swift  README.md  README_en.md  io.github.ellie_commons.jorts.flathub.yml  io.github.elly_code.jorts.devel.yml  io.github.elly_code.jorts.yml  meson.build  todo.md
.codex/agents/: glm-explorer.toml  glm-reviewer.toml  glm-worker.toml
.codex/environments/: environment.toml
.github/workflows/: CI.yml
JortsMacOS/: run-dev.sh
JortsMacOS/macos/: README.md
JortsMacOS/script/: build_and_run.sh
cleanRoom/Deck/: app.go  go.mod  main.go  wails.json
cleanRoom/Deck/frontend/: index.html  package-lock.json
data/: jorts.gschema.xml.in  meson.build
data/fonts/: meson.build
data/icons/: meson.build
docs/: choices.md  gallery.md
docs/development/: building.md  buildsystem.md  code.md  flatpak.md  packagings.md  windows.md
macos/JortsMac/App/: AppDelegate.swift
macos/JortsMac/Models/: AppLanguage.swift  FontFamily.swift  KeyboardShortcutSetting.swift  NoteData.swift  NoteDocument.swift  NoteTheme.swift  NoteVersion.swift  SavedState.swift  TypingEffect.swift
macos/JortsMac/Services/: CommandPaletteWindowController.swift  NoteManager.swift  (+6 more)
po/: LINGUAS  da.po  fr.po  hr.po
po/extra/: LINGUAS  hr.po
script/: build_and_run.sh
scripts/: restart_jortsmac.sh
src/: Application.vala  Constants.vala
src/Objects/: NoteData.vala
src/Services/: NoteManager.vala
src/Views/: PreferencesView.vala
src/Widgets/: ActionBar.vala
src/Windows/: AboutWindow.vala  StickyNoteWindow.vala
(+82 files in other folders)
